# malrepo-ml-pipeline

./: .clinerules  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-gpu.txt  requirements.txt  setup.cfg  setup.py
configs/: base.yaml  deployment.yaml  resnet50.yaml  vit.yaml
docs/: architecture.md  deployment-guide.md  getting-started.md  training-guide.md
docs/experiments/: experiment-template.md
experiments/: README.md  experiment_001.yaml  experiment_002.yaml
kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
notebooks/: 01_eda.ipynb  02_baseline.ipynb  03_experiments.ipynb  04_analysis.ipynb
scripts/: benchmark.py  download_data.py  evaluate.py  export_model.py  setup_env.sh  train.py
src/: __init__.py
src/data/: dataset.py  preprocessing.py  transforms.py  validation.py
src/deployment/: __init__.py  inference.py  monitoring.py  server.py
src/evaluation/: metrics.py  reports.py  visualization.py
src/models/: base.py  registry.py  resnet.py  transformer.py
src/training/: callbacks.py  losses.py  schedulers.py  trainer.py
src/utils/: config.py  io.py  logging.py
tests/: test_data.py  test_models.py  test_training.py
tests/fixtures/: config.yaml  sample_data.npy
