[metadata]
name = mlops-platform
version = 1.2.0
description = End-to-end ML pipeline for computer vision
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0

[options]
packages = find:
python_requires = >=3.10

[options.packages.find]
exclude =
    tests
    notebooks
    experiments

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,build,dist,.eggs

[tool:pytest]
testpaths = tests
addopts = -v --tb=short
